--- a/CSS/showroom_style.css
+++ b/CSS/showroom_style.css
@@ -239,7 +239,7 @@ body, html {
         }
 
         .container_parolaChiave .descrizione p{
-            font-size: 16px;
+            font-size: 1.8vh;
         }
 
         .block1{
@@ -303,11 +303,11 @@ body, html {
     }
 
     .container_parolaChiave .descrizione h1{
-        font-size: 40px;
+        font-size: 5vh;
     }
 
     .container_parolaChiave .descrizione p{
-        font-size: 20px;
+        font-size: 2.5vh;
     }
 
     .touch-btn{
