--- a/CSS/chisiamo_style.css
+++ b/CSS/chisiamo_style.css
@@ -423,7 +423,7 @@ body, html {
 
         .container_section3{
             height: 300px;
-            background: url("../Immagini/ChiSiamo/img3.jpg") no-repeat center center fixed;
+            background: url("../Immagini/ChiSiamo/img3.jpg") no-repeat center center;
             background-size: cover;
         }
 
