--- a/CSS/contatti_styles.css
+++ b/CSS/contatti_styles.css
@@ -6,7 +6,7 @@
 
 body, html {
     font-family: sans-serif;
-    background-color: #EDEAEA;
+    background-color: white;
     height: 100%;
     max-width: 100%;
     margin: 0;
@@ -82,7 +82,7 @@ body, html {
 /* || Section1 Element Style */
 
     .info_preventivo{
-        background-color: #D9D9D9;
+        background-color: white;
         width: 100%;
         display: flex;
         flex-wrap: wrap;
