--- a/CSS/prodotto_style.css
+++ b/CSS/prodotto_style.css
@@ -187,6 +187,18 @@ body, html {
         cursor: pointer;
     }
 
+    .container_immagini{
+        display: none;
+    }
+
+    .container_single_img{
+        display: block;
+        width: 100%;
+        height: 500px;
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-size: contain;
+    }
 
     @media (min-width: 600px) {
 
@@ -195,12 +207,25 @@ body, html {
             gap: 30px;
         }
 
+        .container_single_img{
+            display: none;
+        }
+
         .container_immagini{
             display: grid;
             flex-basis: 100%;
             gap:10px;
             grid-template-columns: repeat(auto-fit,minmax(20%,1fr));
             grid-auto-rows: 150px;
+        }
+
+        .item{
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            object-position: center center;
+            box-shadow: 5px 5px 10px black;
+            cursor: pointer;
         }
 
         .container_img_full{
